--- a/src/DevTon.Data/DevTon.Data.csproj
+++ b/src/DevTon.Data/DevTon.Data.csproj
@@ -3,7 +3,15 @@
   <PropertyGroup>
     <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
-    <Nullable>enable</Nullable>
+  
   </PropertyGroup>
+
+  <ItemGroup>
+    <PackageReference Include="Microsoft.EntityFrameworkCore" Version="6.0.0" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\DevTon.Business\DevTon.Business.csproj" />
+  </ItemGroup>
 
 </Project>
